[firefox-webextensions] popupでのキーイベントのハンドリング確認(Firefoxのバグで動かず)

--- a/firefox-webextensions/open-popup/popup/popup.html
+++ b/firefox-webextensions/open-popup/popup/popup.html
@@ -5,5 +5,7 @@
   </head>
   <body>
     <p>test</p>
+    <input type="text" id="inputText"></input>
+    <script src="popup.js"></script>
   </body>
 </html>
