入力の方でもbuttonを利用するよう変更。

--- a/file-js/index.html
+++ b/file-js/index.html
@@ -4,13 +4,9 @@
     <meta charset="utf-8">
   </head>
   <body>
-    <p>
-      <input type="file" id="inputFile">
-    </p>
+    <button type="button" id="inputFile">Import</button>
     <pre><code id="contents"></code></pre>
-    <p>
-      <button type="button" id="outputFile">Export</button>
-    </p>
+    <button type="button" id="outputFile">Export</button>
     <script src="file.js"></script>
   </body>
 </html>
